--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: ruby
 rvm:
   - 2.1.2
-before_install: gem install bundler -v 1.10.6
+before_install:
+  - gpg --keyserver  hkp://keys.gnupg.net --recv-keys 1C4CBDCDCD2EFD2A && gpg -a --export CD2EFD2A | sudo apt-key add -
+  - echo "deb http://repo.percona.com/apt `lsb_release -cs` main" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get update -qq
+  - sudo apt-get install percona-toolkit
+  - gem install bundler -v 1.10.6
+
+branches:
+  only:
+    - master
