--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install percona-toolkit
   - gem install bundler -v 1.10.6
+  - bin/setup
 
 branches:
   only:
