--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,8 @@ before_install:
 branches:
   only:
     - master
+
+# Appraisal's gemfiles
+gemfile:
+  - gemfiles/rails_3.gemfile
+  - gemfiles/rails_4.gemfile
