--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install percona-toolkit
   - gem update bundler
-  - bin/setup
+install: bin/setup
 after_success:
   - codeclimate-test-reporter
 
