--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install percona-toolkit
   - gem update bundler
-  - bin/setup
+
+install: bin/setup
+
 after_success:
   - codeclimate-test-reporter
